--- a/templates/create_shop.html
+++ b/templates/create_shop.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{% include "header.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 <body>
-
+{% if edit_form %}
+<h1>Update Coffee Shop</h1>
+{% else %}
+<h1>Insert a New Coffee Shop</h1>
+{% endif %}
+{{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
 </body>
 </html>
