--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,11 @@
+{% extends 'bootstrap/base.html' %}
+{% block content %}
 {% include 'header.html' %}
+
 <body>
 <h1>Coffee Shop Ratings San Marcos</h1>
 <h2>All inclusive rating system taking into account coffee, snacks, and study friendliness</h2>
+<h2><a class="btn btn-primary" href="{{url_for('add_shop')}}">Add shop</a></h2>
 {% for shop in shops %}
 <p>
     <a href="{{url_for('view_shop', shop_id=shop.id)}}">{{shop.shop_name}}</a>
@@ -11,3 +15,4 @@
 {% endfor %}
 </body>
 </html>
+{% endblock %}
