--- a/templates/create_shop.html
+++ b/templates/create_shop.html
@@ -1,20 +1,50 @@
-{% include "header.html" %} {% import "bootstrap/wtf.html" as wtf %} {% block
-content %} {% if edit_form %}
-<h1>Update Coffee Shop</h1>
+{% include "header.html" %} 
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block content %} 
+
+{% if edit %}
+<h2 class="subheading">Update {{shop.shop_name}}</h2>
+<div class="flex-container">
+  {% if error %}
+    <h2 class="subheading error">{{error}}</h2>
+  {% endif %}
+
+  <form action="/edit_shop/{{shop.id}}" method="post"
+  class="form" role="form" novalidate>
 {% else %}
-<h1>Insert a New Coffee Shop</h1>
-{% endif %} {{ wtf.quick_form(form, novalidate=True, button_map={"submit":
-"primary"}) }} {% endblock content %}
+<h2 class="subheading">Insert a New Coffee Shop</h2>
+{% if error %}
+<h2 class="subheading error">{{error}}</h2>
+{% endif %}
+<div class="flex-container">
+
+  <form action="/add_shop" method="post"
+  class="form" role="form" novalidate>
+{% endif %} 
+
+    <div class="flex-container">
+      <input id="csrf_token" name="csrf_token" type="hidden" value="ImMxMGFmMmQ0Y2ZiMDhmMzQ5ODc5NmQyNDEyZGU5N2U2YzU0ODgwMzQi.YqdjvQ.d82ymLrhpGgKRxadENcPjHIBodI">
+      <div class="form-group  required"><label class="control-label" for="shop_name">Shop Name</label> <input class="form-control" id="shop_name" name="shop_name" required type="text" placeholder="{{shop.shop_name}}" value="{{shop.shop_name}}">        
+      </div>
+    <div class="form-group "><label class="control-label" for="wifi">wifi Rating</label>
+              <select class="form-control" id="wifi" name="wifi"><option value="{{shop.wifi}}" selected hidden>{{shop.wifi}}</option><option value="⭐">⭐</option><option value="⭐⭐">⭐⭐</option><option value="⭐⭐⭐">⭐⭐⭐</option><option value="⭐⭐⭐⭐">⭐⭐⭐⭐</option><option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option></select>        
+      </div>
+    <div class="form-group "><label class="control-label" for="coffee">Coffee Rating</label>
+              <select class="form-control" id="coffee" name="coffee" required><option value="{{shop.coffee}}" selected hidden>{{shop.coffee}}</option><option value="⭐">⭐</option><option value="⭐⭐">⭐⭐</option><option value="⭐⭐⭐">⭐⭐⭐</option><option value="⭐⭐⭐⭐">⭐⭐⭐⭐</option><option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option></select>
+      </div>
+    <div class="form-group "><label class="control-label" for="snacks">Snacks Rating</label>        
+              <select class="form-control" id="snacks" name="snacks"><option value="{{shop.snacks}}" selected hidden>{{shop.snacks}}</option><option value="⭐">⭐</option><option value="⭐⭐">⭐⭐</option><option value="⭐⭐⭐">⭐⭐⭐</option><option value="⭐⭐⭐⭐">⭐⭐⭐⭐</option><option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option></select>
+      </div>
+    <div class="form-group "><label class="control-label" for="electrical_outlets">Electrical outlets</label>        
+              <select class="form-control" id="electrical_outlets" name="electrical_outlets"><option value="{{shop.electrical_outlets}}" selected hidden>{{shop.electrical_outlets}}</option><option value="⭐">⭐</option><option value="⭐⭐">⭐⭐</option><option value="⭐⭐⭐">⭐⭐⭐</option><option value="⭐⭐⭐⭐">⭐⭐⭐⭐</option><option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option></select>       
+      </div>
+
+        <input class="add-button" id="submit" name="submit" type="submit" value="Submit Coffee Shop">
+</div>
+</form> 
+</div>
+
+{% endblock content %}
 
 
-<!-- <div>
-  <label for="select-where">Where did you hear from us?</label>
-  <select id="select-where" required>
-    <option value="">Please choose one option:</option>
-    <option value="friends">Friends and family</option>
-    <option value="youtube">YouTube video</option>
-    <option value="podcast">Podcast</option>
-    <option value="ad">Facebook ad</option>
-    <option value="others">Others</option>
-  </select>
-</div> -->
